# EthoPlacePrefAnalysis

./: .gitignore  LoadSessionPath.m  PlacePrefDataAnalysis.prj  PlacePrefDataGUI.m  README.md  configs-OpenField.yml  configs-Ymaze.yml  configs-halfres.yml  configs.Ymaze.yml  configs.full.yml  configs.yml  configs_halfres.yml
components/: README.md
components/DropdownMultiSelect/: uidropdownmultiselect.mlapp
components/PathSelector/: FolderSelectorWithDropdown.mlapp  PathSelector.mlapp  import_lib.m
configs/: configs-OpenField.yml  configs-Ymaze.yml  configs-halfres.yml  configs.WUSMAC.yml  configs.full.yml  configs.yml
lib/: .ignore  README.md
lib/datetime/: timenowYMDhms.m  unixtime.m  unixtimeUTC.m
lib/detectOutputSuppression/: detectOutputSuppression.m
lib/ffmpeg/: README.md
lib/matnwb/: .gitignore  README.md
lib/spider_plot-20.8.0.0/: spider_plot.m
lib/trigger-extract/: Cargo.toml  build.rs
lib/uiFileDnD-2023.10.17/: DnD_uifigure.m
old/: plotBatchResults.m  singleTrialAnalysis.m  slowBatchTrialsAnalysis.m  trialHeatmap.m
src/: PlacePrefDataGUI_main.mlapp
src/+ui/: dynamicFigureSize.m  updateBatchDataTree.m
src/+utils/: allargout.m  findAttrValue.m  nestedChildren.m
src/+validator/: isEthovisionProjectFolder.m  isValidFilename.m  isValidFilepath.m  isValidFoldername.m  isValidFolderpath.m  istext.m  mustBeEthovisionProjectFolder.m  mustBeFileOrEmpty.m  mustBeFileOrTable.m  mustBeFileTableOrEmpty.m  mustBeFolderOrEmpty.m  mustBeTextOrEmpty.m  mustBeTextScalarOrEmpty.m  mustBeTrackingProviderOrEmpty.m  mustBeValidFilenameOrEmpty.m  (+8 more)
(+324 files in other folders)
